wraping graph class to prevent double rendering in strict mode; fixing tool tip

--- a/src/components/graphs/forceGraph.module.css
+++ b/src/components/graphs/forceGraph.module.css
@@ -1,4 +1,8 @@
 .container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-content: center;
     width: 100%;
     height: 80vh;
     position: relative;
@@ -7,7 +11,7 @@
 }
 
 .container svg {
-    display: block;
+    display: flex;
     width: 100%;
     height: 100%;
 }
@@ -38,5 +42,4 @@ div.tooltip {
     background: lightsteelblue; 
     border: 0px;        
     border-radius: 8px;         
-    pointer-events: none;           
 }
